manifests/base/proxy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rbac-query-proxy-ingress
  annotations:
    ingress.open-cluster-management.io/rewrite-target: /
    kubernetes.io/ingress.class: "ingress-open-cluster-management"
    ingress.open-cluster-management.io/auth-type: "access-token"
    ingress.open-cluster-management.io/secure-backends: "true"
spec:
  rules:
  - http:
      paths:
      - path: "/observability-query"
        backend:
          service:
            name: rbac-query-proxy
            port:
              number: 8443
        pathType: ImplementationSpecific
